--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,13 +4,12 @@
 }
 
 body {
-    width: 90%;
+    width: 100%;
     min-width: 980px;
     max-width: 1920px;
     min-height: 720px;
     position: relative;
     margin: 0;
-    padding: 0 10px 24px 10px;
 }
 
 a {
@@ -27,6 +26,7 @@ a {
     padding: 10px 50px;
     line-height: 30px;
     display: flex;
+    font-size: 12px;
 }
 
 .login {
@@ -54,23 +54,23 @@ a {
     width: 100%;
     height: 100%;
     left: 0;
-    padding: 48px;
+    padding: 0 48px 48px 48px;
 }
 
 .title {
-    font-size: 36px;
-    line-height: 48px;
-    height: 50px;
+    font-size: 24px;
+    line-height: 36px;
+    height: 36px;
 }
 
 .content {
-    padding: 24px;
+    padding: 12px;
 }
 
 .content .sub-title {
-    font-size: 24px;
-    line-height: 36px;
-    height: 50px;
+    font-size: 18px;
+    line-height: 24px;
+    height: 24px;
 }
 
 .content .description {
@@ -79,6 +79,12 @@ a {
     color: #555;
     padding: 4px 0;
     min-height: 32px;
+}
+
+.content .description.right {
+    float: right;
+    width: 300px;
+    padding-right:30px;
 }
 
 .button {
@@ -97,7 +103,7 @@ a {
     -webkit-user-select: none;
     -ms-user-select: none;
     position: absolute;
-    bottom: 10px !important;
+    bottom: 50px !important;
     cursor: pointer;
     border-radius: 4px;
     -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
@@ -118,8 +124,8 @@ a {
     width: 100px;
     height: 50px;
     line-height: 50px;
-    top: 50%;
-    left: calc(50% - 100px);
+    top: 300px;
+    left: 350px;
 }
 
 .task-complete-button {
@@ -147,8 +153,10 @@ a {
 }
 
 .render-area {
-    width: 800px;
-    height: 800px;
+    width: 500px;
+    height: 500px;
+    float: left;
+    margin: 0 !important;
 }
 
 .render-area > svg#network {
