--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -83,8 +83,8 @@ a {
 
 .content .description.right {
     float: right;
-    width: 300px;
-    padding-right:30px;
+    flex: 1;
+    padding: 0 50px;
 }
 
 .button {
@@ -103,7 +103,7 @@ a {
     -webkit-user-select: none;
     -ms-user-select: none;
     position: absolute;
-    bottom: 50px !important;
+    bottom: 20px !important;
     cursor: pointer;
     border-radius: 4px;
     -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
@@ -153,8 +153,12 @@ a {
 }
 
 .render-area {
-    width: 500px;
-    height: 500px;
+    min-width: 500px;
+    min-height: 500px;
+    max-width: calc(100vh - 200px);
+    max-height: calc(100vh - 200px);
+    width: calc(100vw - 450px);
+    height: calc(100vw - 450px);
     float: left;
     margin: 0 !important;
 }
@@ -195,4 +199,8 @@ text {
     -webkit-user-drag: none;
     -webkit-user-select: none;
     -ms-user-select: none
+}
+
+.flex-wrapper {
+    display: flex;
 }
